--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-sanic
-peewee
-peewee_async
-aiomysql
-uvloop
-aliyun-python-sdk-sts
-oss2
-shortuuid
-PyMySQL
+sanic==0.7.0
+peewee_async==0.5.11
+aiomysql==0.0.12
+uvloop==0.9.1
+aliyun-python-sdk-sts==3.0.0
+oss2==2.4.0
+shortuuid==0.5.0
+PyMySQL==0.8.0
+peewee==2.10.2
